# lumina

./: .clang-tidy  .clangd  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Claude.md  HACKING.md  README.md  Taskfile.yaml  config.toml  vcpkg.json
.claude/: settings.local.json
.task/checksum/: configure
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
docs/plans/: 2026-01-28-imgui-ui-system-design.md  2026-01-28-imgui-ui-system.md
example/: CMakeLists.txt  deferred_demo.cpp  depth.cpp  rendergraph_demo.cpp  sandbox.cpp  scene_demo.cpp  texture.cpp  triangle.cpp
example/assets/chair/: mid_century_lounge_chair_4k.mtl
example/assets/coffee_table/: gothic_coffee_table_4k.mtl
example/assets/lion_head/: lion_head_4k.mtl
example/assets/scenes/: default.scene.json
example/assets/volleyball/: volleyball.mtl
example/shaders/: deferred_composite.slang  deferred_lighting.slang  fullscreen_quad.slang  gbuffer.slang  gbuffer_debug.slang  scene.slang  triangle.slang
include/Core/: Application.hpp  ConfigLoader.hpp  Input.hpp  Logger.hpp  PerformanceStats.hpp  Window.hpp
include/Platform/Linux/: LinuxWindow.hpp
include/Platform/Mac/: MacWindow.hpp
include/Platform/Windows/: WindowsWindow.hpp
include/Renderer/: Camera.hpp  CameraController.hpp  GraphicsContext.hpp  OpenGLContext.hpp  RenderGraph.hpp  RendererConfig.hpp  ShaderCompiler.hpp  ShaderParameterPolicy.hpp  ShaderReflection.hpp
include/Renderer/Asset/: AssetManager.hpp
include/Renderer/Model/: BoundingVolume.hpp  Material.hpp  Mesh.hpp  Model.hpp  ModelLoader.hpp  Vertex.hpp
include/Renderer/RHI/: RHIBuffer.hpp  RHICommandBuffer.hpp  RHIDescriptorSet.hpp  RHIDevice.hpp  RHIPipeline.hpp  RHIRenderTarget.hpp  RHISampler.hpp  RHIShaderModule.hpp  RHISwapchain.hpp  RHITexture.hpp  RHIVertexLayout.hpp  RenderPassInfo.hpp
include/Renderer/RHI/OpenGL/: OpenGLBackend.hpp  OpenGLBuffer.hpp  OpenGLCommandBuffer.hpp  OpenGLDescriptorSet.hpp  OpenGLDevice.hpp  OpenGLImGui.hpp  OpenGLPipelineLayout.hpp  OpenGLRenderTarget.hpp  OpenGLSampler.hpp  OpenGLShaderModule.hpp  OpenGLSwapchain.hpp  OpenGLTexture.hpp
include/Renderer/RHI/Vulkan/: VulkanBackend.hpp  VulkanBuffer.hpp  VulkanCommandBuffer.hpp  VulkanDescriptorSet.hpp  VulkanDevice.hpp  VulkanFrame.hpp  VulkanImGui.hpp  VulkanPipelineLayout.hpp  VulkanRenderTarget.hpp  VulkanSampler.hpp  VulkanShaderModule.hpp  VulkanSwapchain.hpp  VulkanTexture.hpp  VulkanUtils.hpp
include/Renderer/Scene/: LightData.hpp  Scene.hpp  SceneNode.hpp  SceneRenderer.hpp  SceneSerializer.hpp  Transform.hpp
include/UI/: ImGuiStyle.hpp  RHIImGui.hpp  SceneHierarchyPanel.hpp  SettingsPanel.hpp
shaders/: depth.slang
source/Core/: Application.cpp  ConfigLoader.cpp  Input.cpp  Logger.cpp  Window.cpp
source/Platform/Linux/: LinuxWindow.cpp
source/Platform/Mac/: MacWindow.cpp
source/Platform/Windows/: WindowsWindow.cpp
source/Renderer/: Camera.cpp  CameraController.cpp  OpenGLContext.cpp  RenderGraph.cpp  ShaderCompiler.cpp  ShaderParameterPolicy.cpp  ShaderReflection.cpp
source/Renderer/Asset/: AssetManager.cpp
source/Renderer/Model/: Material.cpp  Mesh.cpp  Model.cpp  ModelLoader.cpp  Vertex.cpp
source/Renderer/RHI/: RHIDevice.cpp
source/Renderer/RHI/OpenGL/: OpenGLBuffer.cpp  OpenGLCommandBuffer.cpp  OpenGLDescriptorSet.cpp  OpenGLDevice.cpp  OpenGLImGui.cpp  OpenGLPipelineLayout.cpp  OpenGLRenderTarget.cpp  OpenGLSampler.cpp  OpenGLShaderModule.cpp  OpenGLSwapchain.cpp  OpenGLTexture.cpp
source/Renderer/RHI/Vulkan/: VulkanBuffer.cpp  VulkanCommandBuffer.cpp  VulkanDescriptorSet.cpp  VulkanDevice.cpp  VulkanImGui.cpp  VulkanPipelineLayout.cpp  VulkanRenderTarget.cpp  VulkanSampler.cpp  VulkanShaderModule.cpp  VulkanSwapchain.cpp  VulkanTexture.cpp
source/Renderer/Scene/: Scene.cpp  SceneNode.cpp  SceneRenderer.cpp  SceneSerializer.cpp  Transform.cpp
source/UI/: ImGuiStyle.cpp  RHIImGui.cpp  SceneHierarchyPanel.cpp  SettingsPanel.cpp
test/: CMakeLists.txt
test/source/: lumina_test.cpp
